--- a/index.html
+++ b/index.html
@@ -477,7 +477,14 @@ html,body { height: 100%; font-family: Inter, system-ui, -apple-system, "Segoe U
             <a href="http://www.windacadcam.com/" target="_blank" class="btn btn-outline-primary w-100 mt-2">Manufacturer</a>
           </div>
         </div>
-
+       <div class="col-md-4">
+          <div id="al qadir machinery" class="brand-block p-3 h-100 text-center">
+            <img src="brand.jpg" class="img-fluid mb-3" alt="alqadir Cad Cam">
+            <h5>ALQADIR — CAD-CAM</h5>
+            <p class="small text-muted">REF: AQ-CAD01</p>
+            <a href="https://muhammadzainshoukat12-studio.github.io/Al-Qadir-machinery-official/" target="_blank" class="btn btn-outline-primary w-100 mt-2">Manufacturer</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -490,7 +497,7 @@ html,body { height: 100%; font-family: Inter, system-ui, -apple-system, "Segoe U
       <div class="row g-3">
         <div class="col-md-4"><img src="exhibition.jfif" class="gallery-img" alt="Gallery Image 1"></div>
         <div class="col-md-4"><img src="new banner.png" class="gallery-img" alt="Gallery Image 2"></div>
-        <div class="col-md-4"><img src="photos.jfif" class="gallery-img" alt="Gallery Image 3"></div>
+        <div class="col-md-4"><img src="JUKI sewing machine services and repair.png" class="gallery-img" alt="Gallery Image 3"></div>
       </div>
     </div>
   </section>
