--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ html,body { height: 100%; font-family: Inter, system-ui, -apple-system, "Segoe U
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#home">
-        <img src="brand.jpg" class="nav-logo me-2" alt="AL-QADIR logo">
+        <img src="brand.png" class="nav-logo me-2" alt="AL-QADIR logo">
         <span class="fw-bold">AL-QADIR MACHINERY</span>
       </a>
 
@@ -479,7 +479,7 @@ html,body { height: 100%; font-family: Inter, system-ui, -apple-system, "Segoe U
         </div>
        <div class="col-md-4">
           <div id="al qadir machinery" class="brand-block p-3 h-100 text-center">
-            <img src="brand.jpg" class="img-fluid mb-3" alt="alqadir Cad Cam">
+            <img src="brand.png" class="img-fluid mb-3" alt="alqadir Cad Cam">
             <h5>ALQADIR — CAD-CAM</h5>
             <p class="small text-muted">REF: AQ-CAD01</p>
             <a href="https://muhammadzainshoukat12-studio.github.io/Al-Qadir-machinery-official/" target="_blank" class="btn btn-outline-primary w-100 mt-2">Manufacturer</a>
